// Vitest Snapshot v1

exports[`Message > Message baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-demo"
    data-v-e60c559e=""
    style="margin: 0px 16px;"
  >
    <p
      class="summary"
      data-v-e60c559e=""
    >
      纯文字通知
    </p>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
      data-v-e60c559e=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        纯文字的通知
        
      </span>
    </button>
    <p
      class="summary"
      data-v-e60c559e=""
    >
      带图标通知
    </p>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
      data-v-e60c559e=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        带图标的通知
        
      </span>
    </button>
    <p
      class="summary"
      data-v-e60c559e=""
    >
      带关闭通知
    </p>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
      data-v-e60c559e=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        带关闭的通知
        
      </span>
    </button>
    <p
      class="summary"
      data-v-e60c559e=""
    >
      可滚动通知
    </p>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
      data-v-e60c559e=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        可滚动的通知
        
      </span>
    </button>
    <p
      class="summary"
      data-v-e60c559e=""
    >
      带按钮通知
    </p>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
      data-v-e60c559e=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        带按钮的通知
        
      </span>
    </button>
  </div>
  <!-- 纯文字通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <!-- 带图标通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <!-- 带关闭通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <!-- 滚动通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <!-- 带按钮通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <!-- 带按钮通知 -->
  <transition-stub
    appear="false"
    css="true"
    data-v-e60c559e=""
    name="message"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  
</div>
`;

exports[`Message > Message mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Message 消息通知
  </h1>
  <p
    class="summary"
    style="margin: 8px 16px 0px;"
  >
    用于轻量级反馈或提示，不会打断用户操作。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 32px;"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="button-demo"
        data-v-e60c559e=""
        style="margin: 0px 16px;"
      >
        <p
          class="summary"
          data-v-e60c559e=""
        >
          纯文字通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-e60c559e=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            纯文字的通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-e60c559e=""
        >
          带图标通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-e60c559e=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            带图标的通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-e60c559e=""
        >
          带关闭通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-e60c559e=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            带关闭的通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-e60c559e=""
        >
          可滚动通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-e60c559e=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            可滚动的通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-e60c559e=""
        >
          带按钮通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-e60c559e=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            带按钮的通知
            
          </span>
        </button>
      </div>
      <!-- 纯文字通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      <!-- 带图标通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      <!-- 带关闭通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      <!-- 滚动通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      <!-- 带按钮通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      <!-- 带按钮通知 -->
      <transition-stub
        appear="false"
        css="true"
        data-v-e60c559e=""
        name="message"
        persisted="false"
      >
        <!--v-if-->
      </transition-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 48px;"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="button-demo"
        data-v-fba28ece=""
        style="margin: 0px 16px;"
      >
        <p
          class="summary"
          data-v-fba28ece=""
        >
          普通通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-fba28ece=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            普通通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-fba28ece=""
        >
          成功通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-fba28ece=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            成功通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-fba28ece=""
        >
          警示通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-fba28ece=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            警示通知
            
          </span>
        </button>
        <p
          class="summary"
          data-v-fba28ece=""
        >
          错误通知
        </p>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-fba28ece=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            错误通知
            
          </span>
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Message > Message themeVue demo works fine 1`] = `
<div
  class="button-demo"
  data-v-fba28ece=""
  style="margin: 0px 16px;"
>
  <p
    class="summary"
    data-v-fba28ece=""
  >
    普通通知
  </p>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-fba28ece=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      普通通知
      
    </span>
  </button>
  <p
    class="summary"
    data-v-fba28ece=""
  >
    成功通知
  </p>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-fba28ece=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      成功通知
      
    </span>
  </button>
  <p
    class="summary"
    data-v-fba28ece=""
  >
    警示通知
  </p>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-fba28ece=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      警示通知
      
    </span>
  </button>
  <p
    class="summary"
    data-v-fba28ece=""
  >
    错误通知
  </p>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-fba28ece=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      错误通知
      
    </span>
  </button>
</div>
`;
